--- a/NewTab/style.css
+++ b/NewTab/style.css
@@ -11,7 +11,7 @@
   --iris: #c4a7e7;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
     --base: #faf4ed;
     --overlay: #f2e9e1;
